--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "classnames": "^2.3.2",
         "history": "5.3.0",
         "http-status-codes": "2.3.0",
+        "js-cookie": "^3.0.5",
         "leaflet": "1.7.1",
         "prettier": "^3.6.2",
         "react": "18.2.0",
@@ -29,6 +30,7 @@
         "@testing-library/react": "14.0.0",
         "@testing-library/user-event": "14.5.1",
         "@types/faker": "5.5.9",
+        "@types/js-cookie": "^3.0.6",
         "@types/leaflet": "1.9.3",
         "@types/react": "18.2.25",
         "@types/react-dom": "18.2.11",
