--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,12 @@
 name: Build
 
 on:
-  - pull_request
+  push:
+    branches:
+      - master
+      - module8-task1
+  pull_request:
+    branches: '*'
 
 jobs:
   build:
