--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,5 +55,8 @@ jobs:
           message: |
             ## 🏖️ CodeSandbox Preview
             [![Open in CodeSandbox](https://img.shields.io/badge/Open%20in-CodeSandbox-blue?style=for-the-badge&logo=codesandbox)](https://codesandbox.io/p/github/${{ github.event.workflow_run.head_repository.full_name }}/${{ github.event.workflow_run.head_branch }})
+
+            ## 🎨 Chromatic Storybook
+            [![Open in Chromatic](https://img.shields.io/badge/Open%20in-Chromatic-FC521F?style=for-the-badge&logo=chromatic)](https://www.chromatic.com/library?appId=691256864dc42675fef9fc52&branch=${{ github.event.workflow_run.head_branch }})
           pr_number: ${{ env.PR }}
 
