--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["src", "vite.config.ts"],
+    "include": ["src"],
+    "exclude": ["node_modules"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
